resources/boston/realizationcli.dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: realizationcli
  namespace: realization
spec:
  replicas: 1
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        jobconfig: realizationcli
    spec:
      containers:
      - name: gdtapi
        image: "image-registry.openshift-image-registry.svc:5000/realization/is-bigdatastack-gdt:latest"
        resources:
          requets:
            cpu: "500m"
            memory: "2048Mi"
          limits:
            cpu: "1000m"
            memory: "2048Mi"
        command:
         - 'sleep'
        args:
         - '365d'
        imagePullPolicy: Always
