resources/boston/realizationstatedb.dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: realizationstatedb
  namespace: realization
spec:
  replicas: 1
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        app: realization
        deploymentconfig: realizationstatedb
    spec:
      containers:
      - name: realizationstatedb
        image: mysql:latest
        resources:
          requests:
            cpu: "1000m"
            memory: "8Gi"
          limits:
            cpu: "2000m"
            memory: "16Gi"
        ports:
          - containerPort: 3306
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /var/lib/mysql/
            name: database-volume
          - mountPath: /etc/mysql/conf.d/
            name: database-conf
      securityContext: {}
      volumes:
      - name: database-volume
        persistentVolumeClaim:
          claimName: realizationstatedbclaim
      - name: database-conf
        configMap:
          name: realizationdbconf
          defaultMode: 420
