resources/boston/realizationstatedb.srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: srv-realizationstatedb
  namespace: realization      
spec:
  selector:                  
    deploymentconfig: realizationstatedb  
  ports:
  - name: mongodb
    port: 27017               
    protocol: TCP
    targetPort: 27017
