resources/boston/realizationstatedb.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: realizationstatedb
  namespace: realization
spec:
  path: /
  to:
    kind: Service
    name: srv-realizationstatedb
  port:
    targetPort: 27017
